--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -240,53 +240,100 @@ Qualora un prodotto si discostasse da quanto descritto nell'analisi dei requisit
 
 \subsezione{Procedure di controllo di qualit\`a di processo}
 L'amministratore del progetto deve assicurarsi che gli standard descritti nelle \textit{NormeDiProgetto} siano rispettati, e deve segnalare eventuali infrazioni al responsabile, in modo che provveda a risolverle. Il responsabile della qualit\`a controlla che le attivit\`a di verifica vengano svolte, e che seguano le procedure descritte in questo documento.
-
+\newpage
 
 \sezione{Resoconto delle attivit\`a di verifica}
 
-\subsezione{Tracciamento componenti - requisiti}
-
+\subsezione{Tracciamento Aspettative - Requisiti}
 \begin{table}[h]
 \begin{center}
-		  \begin{tabular}
-					 {@{\extracolsep{\fill}}|c|c|}
-		 \hline
-%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-			\textbf{Aspettative}  & \textbf{Requisiti} \\
-%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-			\hline
-		 ACO-1 &  \\
-		 \hline
-		 ACO-2 & RFO-1 RFO-2 RFO-3 RFO-4\\ & RFO-5 RFO-6 RFO-7 RFO-8\\ & RFO-11 RF0-12 RFO-13 \\
-		 \hline
-		 ACO-3 & RFO-8 RFO-9 RFO-10  \\
-		 \hline
-		 ACO-4 & RFO-14 RFO-15  \\
-		 \hline
-		 ACO-5 & RAO-2 RAO-6 \\
-		 \hline
-		 ACO-6 & RAO-3 \\
-		 \hline
-		 ACO-7 & RIO-1 RIO-2 RIO-3 RIO-4 \\
-		 \hline
-		 ACO-8 & RAO-4 RQO-3 RQO-4 RQO-5 RQO-6  \\
-		 \hline
-		 ACD-1 & RAO-5 \\
-		 \hline
-		 ACF-1 & \\
-		 \hline
-		 ACF-2 & RFD-1 RFD-2 RFF-1 RFF-2 \\
-		 \hline
-		 ACF-3 & RAD-1 \\
-%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
-		\hline %%FINE RIGA
-%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		\end{tabular}
-	\caption{Aspettative-Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA - 
-	\label{tab:aspettative}
-	\end{center}
+     \begin{tabular}
+           {@{\extracolsep{\fill}}|c|c|}
+     \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \textbf{Aspettative} & \textbf{Requisiti} \\
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \hline
+     ACO-1 & \\
+     \hline
+     ACO-2 & RFO-1 RFO-2 RFO-3 RFO-4\\ & RFO-5 RFO-6 RFO-7 RFO-8\\ & RFO-11 RF0-12 RFO-13 \\
+     \hline
+     ACO-3 & RFO-8 RFO-9 RFO-10 \\
+     \hline
+     ACO-4 & RFO-14 RFO-15 \\
+     \hline
+     ACO-5 & RAO-2 RAO-6 \\
+     \hline
+     ACO-6 & RAO-3 \\
+     \hline
+     ACO-7 & RIO-1 RIO-2 RIO-3 RIO-4 \\
+     \hline
+     ACO-8 & RAO-4 RQO-3 RQO-4 RQO-5 RQO-6 \\
+     \hline
+     ACD-1 & RAO-5 \\
+     \hline
+     ACF-1 & \\
+     \hline
+     ACF-2 & RFD-1 RFD-2 RFF-1 RFF-2 \\
+     \hline
+     ACF-3 & RAD-1 \\
+%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
+    \hline %%FINE RIGA
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \caption{Aspettative-Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:aspettative}
+  \end{center}
 \end{table}
-
+ \newpage
+ 
+ \subsezione{Tracciamento Aspettative - Requisiti}
+\begin{table}[h]
+\begin{center}
+     \begin{tabular}
+           {@{\extracolsep{\fill}}|c|c|}
+     \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \textbf{Aspettative} & \textbf{Requisiti} \\
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \hline
+     UC0 & \\
+     \hline
+     UC1 & RFD-3  \\
+     \hline
+     UC2 & RIO-2  RIO-4\\
+     \hline
+     UC3 & RIO-3 \\
+     \hline
+     UC4 & RFO-13 \\
+     \hline
+     UC5 UC6 & RFO-14 \\
+      \hline
+     UC7 UC8 & RFO-15 RFO-16 \\
+     \hline
+     UC9.1 & RFO-1 RFO-2 \\
+     \hline
+     UC9.2 &  RFO-3 \\
+     \hline
+     UC9.3 & RFO-4 \\
+     \hline
+     UC9.4 & RFO-5 \\
+     \hline
+     UC9.5 & RFO-6 RFO-7\\
+     \hline
+     UC10.1 UC10.2 &  RFO-7 \\
+     
+%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
+    \hline %%FINE RIGA
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \caption{Use Case-Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:aspettative}
+  \end{center}
+\end{table}
+ \newpage
+ 
+ 
 \subsezione{Dettaglio delle verifiche tramite analisi}
 \subsezione{Dettaglio delle verifiche tramite prove (test)}
 \subsezione{Dettaglio dell'esito delle revisioni}
