PQ: agg.tabella UC-Req.

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -281,13 +281,13 @@ L'amministratore del progetto deve assicurarsi che gli standard descritti nelle 
     \hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
-  \caption{Aspettative-Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \caption{Aspettative - Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
   \label{tab:aspettative}
   \end{center}
 \end{table}
  \newpage
  
- \subsezione{Tracciamento Aspettative - Requisiti}
+ \subsezione{Tracciamento Use Case - Requisiti}
 \begin{table}[h]
 \begin{center}
      \begin{tabular}
@@ -297,7 +297,7 @@ L'amministratore del progetto deve assicurarsi che gli standard descritti nelle 
       \textbf{Aspettative} & \textbf{Requisiti} \\
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \hline
-     UC0 & \\
+     UC0 & RA0-1 \\
      \hline
      UC1 & RFD-3  \\
      \hline
@@ -311,23 +311,41 @@ L'amministratore del progetto deve assicurarsi che gli standard descritti nelle 
       \hline
      UC7 UC8 & RFO-15 RFO-16 \\
      \hline
-     UC9.1 & RFO-1 RFO-2 \\
+     UC9.1 & RFO-1 RFO-2 RFO-9\\
      \hline
-     UC9.2 &  RFO-3 \\
+     UC9.2 &  RFO-3 RFO-9\\
      \hline
-     UC9.3 & RFO-4 \\
+     UC9.3 & RFO-4 RFO-9\\
      \hline
-     UC9.4 & RFO-5 \\
+     UC9.4 & RFO-5 RFO-9\\
      \hline
-     UC9.5 & RFO-6 RFO-7\\
+     UC9.5 & RFO-6 RFO-7 RFO-9\\
      \hline
-     UC10.1 UC10.2 &  RFO-7 \\
+     UC9.6 UC9.7 & RFO-9 \\
+     \hline
+     UC9.9 & RFF-1 RFO-9 \\
+     \hline
+     UC9.10 & RFD-1 RFO-9\\
+     \hline
+     UC9.11 & RFF-2 RFO-9 \\
+     \hline 
+     UC9.12 & RFD-2 RFO-9 \\
+     \hline
+     UC 9.8 UC10.1 UC10.2 &  RFO-7 \\
+     \hline
+     UC10.3 UC10.4 UC10.5 & RFO-9 \\
+     \hline
+     UC10.5 UC10.7 UC10.10 &  RFO-8 \\
+     \hline
+     UC10.8 UC10.9 & RFO-10 \\
+     \hline
+     UC10.11 & RFD-4 \\
      
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
     \hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
-  \caption{Use Case-Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \caption{Use Case - Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
   \label{tab:aspettative}
   \end{center}
 \end{table}
