Spostato curve di Bezier su obbligatorie e sistemato errore di sintassi

--- a/doc/Aspettative/Aspettative.tex
+++ b/doc/Aspettative/Aspettative.tex
@@ -1,4 +1,4 @@
-\input{base} %BASE!!!
+\input{../TeX/base} %BASE!!!
 \usepackage{multirow}
 \begin{document}
 
@@ -54,7 +54,7 @@ Versione: \insertversion
 
 \begin{list}{-}{}
 \item selezione
-\item linea retta/curva
+\item linea retta/curva di Bezier
 \item zoom
 \item quadrato/rettangolo
 \item cerchio/elisse
@@ -85,7 +85,7 @@ Versione: \insertversion
 \item Il sistema prevede la pubblicazione sul sito "www.sourceforge.net", in conformit\`a con i relativi requisiti di natura open-source, per favorire la continuit\`a del prodotto risultante.
 \end{elenconumerato}
 
-\subsezione{Facolative (ACF)}
+\subsezione{Facoltative (ACF)}
 \begin{elenconumerato}[\textbf{ACF-}]{\subsecindent}
 \item Il sistema AJAXDRAW prevede di avvicinarsi il pi\`u possibile al programma client (open e free) "Inkscape". 
 \item Il sistema AJAXDRAW prevede di implementare le seguenti funzioni:
@@ -95,7 +95,6 @@ Versione: \insertversion
 \item spirali
 \item disegno calligrafico
 \item connettori per diagrammi
-\item curve di bezier
 \end{list}
 
 \item Il sistema  AJAXDRAW prevede di implementare l'utilizzo della libreria "excanvas", open source disponibile su googlecode, la compatibilit\`a con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer).
