Modifiche richieste da Verifica

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -265,7 +265,7 @@ Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebS
 				\item Revisione di Accettazione (RA)
 			\end{elenconumerato}
 
-La rotazione dei ruoli avviene come da tabella (\ref{tab:TabellaRotazRuoli}) a pagina ~\pageref{tab:TabellaRotazRuoli}.\\
+La rotazione dei ruoli avviene come da tabelle (\ref{tab:TabellaRotazRuoliUno}) e (\ref{tab:TabellaRotazRuoliDue}) a pagina ~\pageref{tab:TabellaRotazRuoliUno}.\\
 Dato che ogni componente del gruppo dovr\`a assumere tutti i ruoli, \`e previsto che nelle varie fasi del progetto i membri della societ\`a si assumano pi\`u incarichi. Non \`e permesso che uno stesso membro ricopra ruoli in conflitto di interessi tra loro.\\
 
 \sezione{Pianificazione}
