PP: sistemate iterazioni

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -305,31 +305,8 @@ In questa sottosezione verr\` a illustrato il preventivo totale, comprendente i 
 \includegraphics[width=350pt]{CostiTotali}
 
 \subsezione{Pianificazione economico-temporale RR-RPP}
-All'interno di questa fase avverr\`a la prima iterazione prevista dal modello di ciclo di vita.
-Al termine dell'iterazione verranno soddisfatti i seguenti requisiti:\\
-
-%%\begin{enumerate}
-\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item RFO-1
-\item RFO-2
-\item RFO-3
-\item RFO-4
-\item RFO-5
-\item RFO-6
-\item RFO-7
-\item RFO-8
-\item RFO-9
-\item RFO-10
-\item RFO-11
-\item RFO-12
-\item RFO-13
-\item RFO-14
-\item RFO-15
-\item RFD-1
-\item RFD-2
-\item RFD-3
-\end{elenconumerato}
-
+All'interno di questa fase si concluder\`a la fase di analisi e inizier\`a quella di progettazione, con la definizione di un progetto di massima che si svilupper\`a e concretizzer\`a nelle due iterazioni previste all'interno della fase RPP-RQ, descritta in seguito. \\
+\\
 Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto preliminare.
 \begin{table}[h]
 	\begin{center}
@@ -363,33 +340,43 @@ Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto pre
 
 
 \subsezione{Pianificazione economico-temporale RPP-RQ}
-All'interno di questa fase avverr\`a la seconda iterazione prevista dal modello di ciclo di vita.
-Al termine dell'iterazione verr\`a rilasciato un prototipo che soddisfer\`a i seguenti requisiti:\\
+All'interno di questa fase avverranno le due iterazioni previste. I requisiti non funzionali verranno soddisfatti in modo trasversale rispetto alle due iterazioni. La prima iterazione inizier\`a immediatamente dopo l'RPP e si concluder\`a a met\`a della fase RPP-RQ. Al termine dell'iterazione verranno soddisfatti i seguenti requisiti funzionali:
 
 %%\begin{enumerate}
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item RPO-1
-\item RQO-1
-\item RQO-2
-\item RQO-3
-\item RQO-4
-\item RQO-5
-\item RQO-6
-\item RQO-7
-\item RQO-8
-\item RQO-9
-\item RQO-10
-\item RIO-1
-\item RIO-2
-\item RIO-3
-\item RIO-4
-\item RAO-1
-\item RAO-2
-\item RAO-3
-\item RAO-4
-\item RAO-5
-\item RAO-6
-\item RAD-1
+\item RFO-1
+\item RFO-2
+\item RFO-3
+\item RFO-4
+\item RFO-5
+\item RFO-6
+\item RFO-7
+\item RFO-11 (parzialmente)
+\item RFO-14 (parzialmente)
+\item RFO-15 (parzialmente)
+\end{elenconumerato} 
+
+La seconda iterazione inizier\`a dopo la conclusione della prima. Al termine di questa iterazione il prodotto soddisfer\`a i seguenti requisiti funzionali:
+
+%%\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\item RFO-8
+\item RFO-9
+\item RFO-10
+\item RFO-11 (completamente)
+\item RFO-12
+\item RFO-13
+\item RFO-14 (completamente)
+\item RFO-15 (completamente)
+\end{elenconumerato}
+
+La seconda iterazione potr\`a inoltre soddisfare i seguenti requisiti funzionali in modo compatibile con le risorse disponibili:
+
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\item RFD-1
+\item RFD-2
+\item RFD-3
+\item RFD-4
 \end{elenconumerato}
 
 Preventivo relativo alla fase Revisione del progetto preliminare-Revisione di qualifica.
