PP: aggiunto requisito a iterazioni

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -352,8 +352,8 @@ All'interno di questa fase avverranno le due iterazioni previste. I requisiti no
 \item RFO-6
 \item RFO-7
 \item RFO-11 (parzialmente)
-\item RFO-14 (parzialmente)
 \item RFO-15 (parzialmente)
+\item RFO-16 (parzialmente)
 \end{elenconumerato} 
 
 La seconda iterazione inizier\`a dopo la conclusione della prima. Al termine di questa iterazione il prodotto soddisfer\`a i seguenti requisiti funzionali:
@@ -366,8 +366,9 @@ La seconda iterazione inizier\`a dopo la conclusione della prima. Al termine di 
 \item RFO-11 (completamente)
 \item RFO-12
 \item RFO-13
-\item RFO-14 (completamente)
+\item RFO-14
 \item RFO-15 (completamente)
+\item RFO-16 (completamente)
 \end{elenconumerato}
 
 La seconda iterazione potr\`a inoltre soddisfare i seguenti requisiti funzionali in modo compatibile con le risorse disponibili:
