Corretto errore sintassi

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -252,8 +252,8 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 \subsezione{Assunzioni Iniziali}
 \begin{itemize}
 \item Il costo totale stimato \`e di 13059 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
-\item Sono previste 630 ore di lavoro totali per la realizzazione del progetto.\\ 
-\item L'impegno individuale di ogni componente varia da un minimo di 85 ore ad un massimo di 105 ore.\\
+\item Sono previste 630 ore di lavoro totali per la realizzazione del progetto.
+\item L'impegno individuale di ogni componente varia da un minimo di 85 ore ad un massimo di 105 ore.
 \end{itemize}
 
 
@@ -590,7 +590,7 @@ nella sezione "Assunzioni Iniziali".
 
 \sezione{Analisi e Gestione dei Rischi}
 In questa sezione saranno presi in considerazione i possibili problemi che potrebbero sorgere durante la realizzazione del progetto, sia dal punto di vista della pianificazione delle fasi di lavoro, che da quello di eventuali rischi relativi alla tecnologia usata.\\
-I punti di rischio da noi identificati e valutati sono i seguenti:\\
+I punti di rischio da noi identificati e valutati sono i seguenti:
 \begin{itemize}
 \item \textbf{Rischi inerenti al modello di ciclo di vita incrementale}\\
 \`E molto importante effettuare una corretta scelta delle attivit\`a, da coordinare durante le varie fasi di lavoro.
