sistemato tracciamento ru-rs, rimosse scorie

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -741,14 +741,13 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
 \begin{elenconumerato}[\textbf{RQO-}]{\subsubsecindent}
 \item Il lato client dell'applicativo dev'essere realizzato usando tecnologie web standard
 \footnote{con il termine \H{}standard\H{} si intendono tecnologie effettivamente standardizzate come l'\underline{ECMAScript} o tecnologie considerate standard \textit{de facto} come quelle raccomandata dal \textit{W3C}.}
-\item Il codice sorgente rispetta lo standard di codifica interno all'azienda.
-\item Il codice sorgente \`e scritto in accordo con i paradigmi dell'orientamento agli oggetti.
-\item Il codice sorgente \`e corredato di documentazione completa.
-\item La progettazione sar\`a orientata alla flessibilit\`a del codice.
-\item Lo sviluppo del prodotto sar\`a accompagnato da fasi di test opportunamente documentate.
+\item Il codice sorgente segue le norme interne all'azienda.
+\item Il codice sorgente segue il paradigma della programmazione ad oggetti.
+\item Il codice sorgente \`e completamente documentato.
+\item La progettazione permetter\`a l'estensibilit\`a futura del prodotto.
+\item I test del prodotto saranno documentati.
 \item Il prodotto non necessita di nessuna installazione, basandosi su una pagina web HTML.
 \item Il server dev'essere in grado di gestire pi\`u utenti in parallelo in modo indipendente.
-\item L'eventuale richiesta di uscita dal programma da parte dell'utente deve avere sempre la precedenza sulle altre attivit\`a che il programma deve compiere.
 \item Il funzionamento dell'applicazione dev'essere indipendente dalla risoluzione dello schermo dell'utente.
 \end{elenconumerato}
 
