--- a/doc/Aspettative/Aspettative.tex
+++ b/doc/Aspettative/Aspettative.tex
@@ -97,8 +97,7 @@ Versione: \insertversion
 \item connettori per diagrammi
 \end{list}
 
-\item Il sistema  AJAXDRAW prevede di implementare l'utilizzo della libreria "excanvas", open source disponibile su googlecode, la compatibilit\`a con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer).
-         Usufruendo della libreria "excanvas", open source disponibile su googlecode, creata appositamente per la simulazione degli oggetti canvas, sar\`a possibile far funzionare il disegnatore web su questi browser. 
+\item Il sistema AJAXDRAW prevede la compatibilit\`a con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer). Usufruendo della libreria "excanvas", open source disponibile su googlecode, creata appositamente per la simulazione degli oggetti canvas, sar\`a possibile far funzionare il disegnatore web su questi browser. 
 \end{elenconumerato}
 
 \end{document}
