--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -254,25 +254,25 @@ L'amministratore del progetto deve assicurarsi che gli standard descritti nelle 
       \textbf{Aspettative} & \textbf{Requisiti} \\
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \hline
-     ACO-1 & \\
+     ACO-1 & RPO-1 RQO-9 \\
      \hline
-     ACO-2 & RFO-1 RFO-2 RFO-3 RFO-4\\ & RFO-5 RFO-6 RFO-7 RFO-8\\ & RFO-11 RF0-12 RFO-13 \\
+     ACO-2 & RFO-1 RFO-2 RFO-3 RFO-4\\ & RFO-5 RFO-6 RFO-7 RFO-8\\ & RFO-11 RF0-12 RFO-13 RFO-14 \\
      \hline
      ACO-3 & RFO-8 RFO-9 RFO-10 \\
      \hline
-     ACO-4 & RFO-14 RFO-15 \\
+     ACO-4 & RFO-15 RFO-16 \\
      \hline
-     ACO-5 & RAO-2 RAO-6 \\
+     ACO-5 & RQO-1 RQO-7 RQO-8 RAO-1 RAO-2 RAO-6 \\
      \hline
      ACO-6 & RAO-3 \\
      \hline
      ACO-7 & RIO-1 RIO-2 RIO-3 RIO-4 \\
      \hline
-     ACO-8 & RAO-4 RQO-3 RQO-4 RQO-5 RQO-6 \\
+     ACO-8 & RAO-4 RQO-2 RQO-3 RQO-4 RQO-5 RQO-6 \\
      \hline
      ACD-1 & RAO-5 \\
      \hline
-     ACF-1 & \\
+     ACF-1 & RFD-3 RFD-4 \\
      \hline
      ACF-2 & RFD-1 RFD-2 RFF-1 RFF-2 \\
      \hline
