PQ: corretto errore ortografico

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -199,7 +199,7 @@ Il progetto architetturale dovr\`a essere controllato secondo le seguenti caratt
 \item Aderenza alle \textit{NormeDiProgetto}.
 \item Completezza: per controllare l'aderenza ai requisiti, dovr\`a essere verificata la tracciabilit\`a tra ogni requisito e la parte, o le parti, che lo soddisfano nel progetto.
 \item Sufficienza: ogni elemento del progetto dovr\`a, o soddissfare un requisito, o essere una dipendenza, diretta o indiretta, di un elemento necessario a soddisfare un requisito, in modo che nessuna parte del progetto risulti superflua.
-\item Estendibilit\`a e mantenibilit\`a: il progetto dovr\`a prevedere la possibilt\`a che il prodotto possa essere facilmente esteso e mantenuto in futuro.
+\item Estendibilit\`a e mantenibilit\`a: il progetto dovr\`a prevedere la possibilit\`a che il prodotto possa essere facilmente esteso e mantenuto in futuro.
 \item Efficienza: sebbene si ritenga che l'ottimizzazione prematura vada evitata il pi\`u possibile, considerata la necessit\`a da parte dell'applicazione di un server, la fase di progettazione dovr\`a assicurare che il server sia in grado di gestire un numero elevato di client contemporaneamente senza che l'utente noti problemi di performance.
 \end{elenconumerato}
 \paragraph{Verifica del progetto di dettaglio}
