--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -25,7 +25,7 @@
 
 \begin{center}
 	\begin{large}
-				\textbf{Software per il Disegno Grafico in Tecnologie Web}
+				\textbf{Software per il Disegno Grafico\\ in Tecnologie Web}
 	\end{large}
 \end{center}			
 
@@ -124,7 +124,7 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
 
 	\begin{elenconumerato}{\normindent}
 		\item WebShape
-		\item I committenti Vardanega Tullio e Conte Renato in rappresentanza \\  dell'azienda proponente Zucchetti SPA
+		\item I committenti Conte Renato e Vardanega Tullio in rappresentanza \\  dell'azienda proponente Zucchetti SPA
 		%\item Il committente Conte Renato
 	\end{elenconumerato}
 
@@ -199,7 +199,7 @@ Il progetto architetturale dovr\`a essere controllato secondo le seguenti caratt
 \item Aderenza alle \textit{NormeDiProgetto}.
 \item Completezza: per controllare l'aderenza ai requisiti, dovr\`a essere verificata la tracciabilit\`a tra ogni requisito e la parte, o le parti, che lo soddisfano nel progetto.
 \item Sufficienza: ogni elemento del progetto dovr\`a, o soddissfare un requisito, o essere una dipendenza, diretta o indiretta, di un elemento necessario a soddisfare un requisito, in modo che nessuna parte del progetto risulti superflua.
-\item Estendibilit\`a e mantenibilit\`a: il progetto dovr\`a prevedere la possibilit\`a che il prodotto possa essere facilmente esteso e mantenuto in futuro.
+\item Estendibilit\`a e manutenibilit\`a: il progetto dovr\`a prevedere la possibilit\`a che il prodotto possa essere facilmente esteso e mantenuto in futuro.
 \item Efficienza: sebbene si ritenga che l'ottimizzazione prematura vada evitata il pi\`u possibile, considerata la necessit\`a da parte dell'applicazione di un server, la fase di progettazione dovr\`a assicurare che il server sia in grado di gestire un numero elevato di client contemporaneamente senza che l'utente noti problemi di performance.
 \end{elenconumerato}
 \paragraph{Verifica del progetto di dettaglio}
@@ -213,7 +213,7 @@ Il progetto di dettaglio dovr\`a soddisfare i seguenti aspetti:
 \paragraph{Verifica del codice}
 La verifica del codice si compone dei seguenti aspetti:
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item Verifica automatica: verr\`a effettuata tramite test di unit\`a predisposti dai verificatori. I test dovranno coprire tutto il codice, a eccezzione delle parti il cui funzionamento dipende da input esterni non simulabili in un test di unit\`a, come ad esempio il codice che gestisce gli eventi generati dal movimento del mouse, oppure da effetti secondari i cui risultati non siano facilmente confrontabili in modo automatico, ad esempio come appare l'aspetto grafico del programma sullo schermo dell'utente. I test dovranno accertare il corretto funzionamento delle unit\`a di codice anche con input limite.
+\item Verifica automatica: verr\`a effettuata tramite test di unit\`a predisposti dai verificatori. I test dovranno coprire tutto il codice, a eccezione delle parti il cui funzionamento dipende da input esterni non simulabili in un test di unit\`a, come ad esempio il codice che gestisce gli eventi generati dal movimento del mouse, oppure da effetti secondari i cui risultati non siano facilmente confrontabili in modo automatico, ad esempio come appare l'aspetto grafico del programma sullo schermo dell'utente. I test dovranno accertare il corretto funzionamento delle unit\`a di codice anche con input limite.
 \item Prova del prodotto: sar\`a effettuata eseguendo l'applicazione e interagendo con essa, assicurandosi che corrisponda a quanto progettato.
 \item Confronto con altri software gi\`a esistenti: requisito fondamentale del prodotto \`e la capacit\`a di generare immagini in formato \underline{SVG}. Per assicurarsi che i file generati siano corretti, si caricheranno su software la cui correttezza \`e nota (ad esempio \textit{Inkscape}) e ci si assicurer\`a che le immagini visualizzate corrispondano con quanto disegnato dall'utente. 
 \item Lettura del codice per controllare che le norme di codifica siano rispettate
